// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unmock end to end node 1`] = `
{
  "hash": "fd0c3e6f",
  "host": "www.behance.net",
  "method": "get",
  "path": "/v2/projects?api_key=u_n_m_o_c_k_200"
}
`;

exports[`unmock end to end node 2`] = `
{
  "hash": "e8276c8e",
  "host": "www.behance.net",
  "method": "get",
  "path": "/v2/projects/5630?api_key=u_n_m_o_c_k_200"
}
`;

exports[`unmock end to end node 3`] = `
{
  "hash": "d603ae6e",
  "host": "www.behance.net",
  "method": "get",
  "path": "/v2/projects/5630/comments?api_key=u_n_m_o_c_k_200"
}
`;

exports[`unmock end to end node 4`] = `
{
  "hash": "d01d13fe",
  "host": "api.hubapi.com",
  "method": "post",
  "path": "/contacts/v1/contact/createOrUpdate/email/testingapis@hubspot.com/?hapikey=demo"
}
`;
